# SimpleSumExcel

./: .gitignore  CMakeLists.txt  README.md
gui/: main.cpp
gui/pages/: mainPage.cpp  mainPage.h  mainPage.ui
src/: MainExcel.cpp  MainExcel.hpp  MainExcelXLS.cpp  MainExcelXLS.hpp  SettingsLoader.cpp  SettingsLoader.hpp  utils.cpp  utils.hpp
